--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.9",
-    "puppeteer": "^10.1.0"
+    "puppeteer": "^10.1.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
